Fix breadcumbs and displaying categories on mobile

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -74,11 +74,11 @@
     .browse-categories {
       display: none;
     }
+
+    .browse-categories-index {
+        display: block;
+    }
   }
-
-// !!! Add for it not to happen in index page
-
-
 
 
 // NHS.UK heading with span
